--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 		<!-- Navbar -->
 
 		<nav class="nav-container">
-			<div class="logo-container"></div>
+			<div class="logo-container">
+				<a href="./index.html"><img src="./assets/Logo.png" alt="" /></a>
+			</div>
 			<ul class="nav-link-container">
 				<li class="nav-link" class="nav-link">
 					<a href="/registration" class="nav-link-a">Registration</a>
@@ -36,6 +38,9 @@
 		<!-- Hero Section -->
 
 		<section class="hero-container">
+			<video autoplay loop>
+				<source src="./assets/hero.mp4" type="video/mp4" />
+			</video>
 			<div class="hero-main-div">
 				<h3>A National Level Technical Symposium on</h3>
 				<h1><span>DD</span><span>MM</span><span>YYYY</span></h1>
