--- a/index.html
+++ b/index.html
@@ -42,24 +42,30 @@
 				<source src="./assets/hero.mp4" type="video/mp4" />
 			</video>
 			<div class="hero-main-div">
+				<img src="./assets/CIT LOGO - White.png" alt="" />
+				<h3>Department of</h3>
+				<h1>Mecanical Engineering</h1>
+				<h3>Welcomes you to...</h3>
+				<img src="./assets/Logo.png" alt="" />
+				<h1>MECHGUST ' 22</h1>
 				<h3>A National Level Technical Symposium on</h3>
 				<h1><span>DD</span><span>MM</span><span>YYYY</span></h1>
 				<h3>Welcome to the FASTLANE</h3>
 				<div class="hero-countdown-container">
 					<div class="each-hc-container hc-days">
-						<div class="hc-number">00</div>
+						<div class="hc-number" id="hc-days">00</div>
 						<div class="each-hc-label">Days</div>
 					</div>
 					<div class="each-hc-container hc-hours">
-						<div class="hc-number">00</div>
+						<div class="hc-number" id="hc-hours">00</div>
 						<div class="each-hc-label">Hours</div>
 					</div>
 					<div class="each-hc-container hc-minutes">
-						<div class="hc-number">00</div>
+						<div class="hc-number" id="hc-minutes">00</div>
 						<div class="each-hc-label">Minutes</div>
 					</div>
 					<div class="each-hc-container hc-seconds">
-						<div class="hc-number">00</div>
+						<div class="hc-number" id="hc-seconds">00</div>
 						<div class="each-hc-label">Seconds</div>
 					</div>
 				</div>
@@ -151,5 +157,28 @@
 			</p>
 			<br />
 		</main>
+
+		<footer>
+			<div class="socials">
+				<a href="https://www.instagram.com/mechgust_cit/"
+					><img
+						src="https://static.wixstatic.com/media/da7ef6dd1302486c9a67baebe4b364bc.png/v1/fill/w_38,h_38,al_c,usm_0.66_1.00_0.01,enc_auto/da7ef6dd1302486c9a67baebe4b364bc.png"
+						alt=""
+				/></a>
+				<a href="https://www.youtube.com/channel/UCBV7w8iEC_K_02rtNRz8Lqw"
+					><img
+						src="https://static.wixstatic.com/media/e9bb463a1bc4434….01,enc_auto/e9bb463a1bc4434c9d33b81b1fe937f5.png"
+						alt=""
+				/></a>
+				<a href="https://www.facebook.com/mechgust/"
+					><img
+						src="https://static.wixstatic.com/media/e0678ef25486466….01,enc_auto/e0678ef25486466ba65ef6ad47b559e1.png"
+						alt=""
+				/></a>
+			</div>
+			<p>© 2022 Mechgust - ALL RIGHTS RESERVED</p>
+		</footer>
+		<script src="./js/moment.js"></script>
+		<script src="./js/index.js"></script>
 	</body>
 </html>
