--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>MechGust</title>
 	<link rel="stylesheet" href="./public/styles/index.css" />
+	<link rel="stylesheet" href="./public/styles/footer.css" />
 	<link rel="stylesheet" href="./public/styles/nav.css">
 </head>
 
@@ -20,6 +21,9 @@
 		<ul class="nav-link-container">
 			<li class="nav-link" class="nav-link">
 				<a href="/registration" class="nav-link-a">Registration</a>
+			</li>
+			<li class="nav-link">
+				<a href="./views/about.html" class="nav-link-a">About</a>
 			</li>
 			<li class="nav-link">
 				<a href="./views/technical-events.html" class="nav-link-a">Technical Events</a>
